--- a/Web.config
+++ b/Web.config
@@ -5,16 +5,19 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 
-
 <configuration>
   
   <connectionStrings>
-    <add name="con" connectionString="uid=admin211;password=211;database=hup;server=(local)"/>
+    <add name="con" connectionString="uid=admin211;pwd=admin;database=hup;server=(local)"/>
   </connectionStrings>
   
     <system.web>
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
     </system.web>
+  <appSettings>
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
 
 </configuration>
